Release 0.2.4
